# hierarchy-builder

./: .gitignore  .travis.yml  AUTHORS.md  Changelog.md  LICENSE  Makefile  Makefile.common  Makefile.coq.local  Makefile.test-suite.coq.local  NES.v  README.md  _CoqProject  _CoqProject.test-suite  _CoqProject.test-suite-stdlib  coq-hierarchy-builder-shim.opam  coq-hierarchy-builder.opam  declare_factory.elpi  default.nix  demo.v  demo2.v  experiments.v  hb-coq-vernac.elpi  hb-database.elpi  hb-synthesis.elpi  hb-utils.elpi  hb.builders.elpi  hb.context.elpi  hb.elpi  hb.export.elpi  hb.factory.elpi  hb.instance.elpi  hb.ml  hb.status.elpi  hb.structure.elpi  hb.v  hierarchy-builder.elpi  instance.ipynb  instance.md  meta.yml  readme.v  (+5 more)
.nix/: config.nix  coq-nix-toolbox.nix  fallback-config.nix  nixpkgs.nix
.travis/: docker-install.sh  docker-test.sh
Coq2020_material/: CoqWS_demo.v  CoqWS_expansion.v  example.v
FSCD2020_material/: V1.v  V2.v  V3.v  V4.v
FSCD2020_talk/: V1.v  V2.v  V3.v
HB/: README.md  about.elpi  builders.elpi  context.elpi  doc.elpi  export.elpi  factory.elpi  graph.elpi  howto.elpi  instance.elpi  lock.elpi  pack.elpi  status.elpi  structure.elpi  structures.v
demo1/: README.md  hierarchy_0.v  hierarchy_1.v  hierarchy_2.v  hierarchy_3.v  hierarchy_4.v  hierarchy_5.v  stage0.v  stage1.v  stage2.v  stage3.v  stage4.v  stage5.v  test_1_0.v  test_2_0.v  test_3_0.v  test_3_3.v  test_4_0.v  test_5_3.v  user_0.v  user_3.v
demo2/: classical.v  stage10.v  stage11.v
demo3/: hierarchy_0.v  hierarchy_1.v  hierarchy_2.v  stage20.v  test_2_0.v  user_0.v
demo4/: hierarchy_0.v
demo5/: hierarchy_0.v
examples/: hulk.v  readme.v
shim/: Makefile  _CoqProject  structures.v
tests/: about.v  about.v.out  about.v.out.13  about.v.out.15  about.v.out.20  about.v.out.21  alias_f_instance.v  auto_wrap.v  bug_435.v  bug_447.v  class_for.v  close_hole_term.v  cmonoid_enriched_cat.v  coercion.v  compress_coe.v  compress_coe.v.out  compress_coe.v.out.14  compress_coe.v.out.15  declare.v  display.v  (+85 more)
(+227 files in other folders)
