opam-version: "2.0"
name: "coq-hierarchy-builder"
version: "dev"
maintainer: "Enrico Tassi <enrico.tassi@inria.fr>"
authors: [ "Cyril Cohen" "Kazuhiko Sakaguchi" "Enrico Tassi" ]
license: "MIT"
homepage: "https://github.com/math-comp/hierarchy-builder"
bug-reports: "https://github.com/math-comp/hierarchy-builder/issues"
dev-repo: "git+https://github.com/math-comp/hierarchy-builder"

build: [ make ]
install: [ make "install" "VFILES=structures.v" ]
depends: [
  "coq"      {>= "8.10.0" & < "8.12.0~" }
  "coq-elpi" {>= "1.3.0" & < "1.4.0~"}
  ]
synopsis: "Hierarchy Builder"
description: """
High level commands to declare and evolve a hierarchy based on packed classes.
"""
